Update and rename tim_cheese.html to index.html

--- a/index.html
+++ b/index.html
@@ -290,12 +290,10 @@
   <div class="header">
     <h1 class="title">TIM CHEESE</h1>
     <div class="links">
-      <a href="https://pump.fun" class="button" target="_blank">PUMP.FUN</a>
       <a href="https://x.com" class="button" target="_blank">X</a>
-      <a href="https://telegram.org" class="button" target="_blank">TELEGRAM</a>
     </div>
     <div class="contract-address-wrapper">
-      <p class="contract-address" onclick="copyToClipboard('YOUR_CONTRACT_ADDRESS')">CA: 0x1234...abcd</p>
+      <p class="contract-address" onclick="copyToClipboard('YOUR_CONTRACT_ADDRESS')">CA: </p>
       <span class="green-tick" id="tick">✔</span>
     </div>    
     <p class="locked-in-text" id="locked-in">Locked In</p> <!-- "Locked in" text -->
