--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
             font-size: 20px;
         }
         
-        .ca {
+        .twitter-link {
             font-size: 18px;
+            color: black;
+            text-decoration: none;
+        }
+        
+        .twitter-link:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -42,7 +48,7 @@
     <div class="container">
         <div class="domain">goonfi.fun</div>
         <div class="title">GoonFi</div>
-        <div class="ca">CA: XXXX</div>
+        <a href="https://twitter.com" class="twitter-link">twitter</a>
     </div>
 </body>
 </html>
