--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="domain">goonfi.fun</div>
         <div class="title">GoonFi</div>
-        <a href="https://twitter.com" class="twitter-link">twitter</a>
+        <a href="https://x.com/i/communities/1960144420155654182" class="twitter-link">twitter</a>
     </div>
 </body>
 </html>
